# pca

./: CMakeLists.txt  README.md  conanfile.py
example/: CMakeLists.txt  main.cpp
prebuilt/datatype/include/: datatype.hpp
src/: CMakeLists.txt  pca.cpp  pca.hpp
